--- a/userpatches/config-common.conf
+++ b/userpatches/config-common.conf
@@ -1,7 +1,7 @@
 # Default config common for all platforms
 # Each board can override this on their own config files
 
-KERNEL_ONLY="no"			# leave empty to select each time, set to "yes" or "no" to skip dialog prompt
+BUILD_ONLY="u-boot"
 KERNEL_CONFIGURE="no"			# leave empty to select each time, set to "yes" or "no" to skip dialog prompt
 CLEAN_LEVEL="make,debs,oldcache"	# comma-separated list of clean targets: "make" = make clean for selected kernel and u-boot,
 					# "debs" = delete packages in "./output/debs" for current branch and family,
