Added htop as an additional package.

--- a/userpatches/lib.config
+++ b/userpatches/lib.config
@@ -8,7 +8,7 @@ PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL tcpdump traceroute nmap tshark
 PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL nginx-light php7.4-fpm cockpit cockpit-packagekit cockpit-storaged gnupg1 dirmngr apt-transport-https tftpd-hpa tftp"
 
 # Miscelaneous (editors, build, libraries, etc)
-PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL tmux mg vim lshw build-essential libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libboost-thread-dev libffi-dev libcurl4-openssl-dev libssl-dev libjpeg-dev"
+PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL tmux mg vim lshw build-essential libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libboost-thread-dev libffi-dev libcurl4-openssl-dev libssl-dev libjpeg-dev htop"
 
 # Remove NetworkManager Packages
 PACKAGE_LIST_RM="network-manager network-manager-gnome network-manager-openvpn-gnome"
