Pointing to a specific branch.

--- a/packages/extras-buildpkgs/90-wlanpi-webui.conf
+++ b/packages/extras-buildpkgs/90-wlanpi-webui.conf
@@ -1,7 +1,7 @@
 # wlanpi-webui
 local package_name="wlanpi-webui"
 local package_repo="https://github.com/wlan-pi/wlanpi-webui.git"
-local package_ref="branch:main"
+local package_ref="branch:1.0.0-b3-2"
 local package_upstream_version="1.0.0-b3-2"
 local package_builddeps=""
 local package_install_target="wlanpi-webui"
