Adds support for WLAN Pi NEO

--- a/userpatches/config-common.conf
+++ b/userpatches/config-common.conf
@@ -9,7 +9,7 @@ CLEAN_LEVEL="make,debs,oldcache"	# comma-separated list of clean targets: "make"
 					# "cache" = delete "./output/cache", "sources" = delete "./sources"
 					# "oldcache" = remove old cached rootfs except for the newest 8 files
 
-BRANCH="current"
+BRANCH="edge"
 RELEASE="bullseye"
 BUILD_MINIMAL="no"
 BUILD_DESKTOP="no"
