--- a/config/boards/wlanpi-neo.conf
+++ b/config/boards/wlanpi-neo.conf
@@ -7,5 +7,5 @@ MODULES_BLACKLIST="lima"
 DEFAULT_OVERLAYS="i2c0 usbhost1 usbhost2"
 DEFAULT_CONSOLE="serial"
 SERIALCON="ttyS0,ttyGS0"
-BUILD_DESKTOP="no"
-KERNEL_TARGET="current,dev"
+HAS_VIDEO_OUTPUT="no"
+KERNEL_TARGET="legacy,current,edge"
