--- a/userpatches/lib.config
+++ b/userpatches/lib.config
@@ -1,3 +1,6 @@
+# Kernel version
+KERNELBRANCH="tag:v6.1.11"
+
 # Python packages
 PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL libpython3-dev libpython3.9 libpython3.9-dev python3-certifi python3-chardet python3-dev python3-idna python3-numpy python3-protobuf python3-requests python3-serial python3-six python3-urllib3 python3-usb python3.9-dev python3-scapy python3-wheel python3-pillow python3-pil python3-pip python3-setuptools python3-smbus python3-venv"
 
