--- a/config/boards/wlanpi-neo2.conf
+++ b/config/boards/wlanpi-neo2.conf
@@ -2,9 +2,9 @@
 BOARD_NAME="WLAN Pi NEO2"
 BOARDFAMILY="sun50iw2"
 BOOTCONFIG="nanopi_neo2_defconfig"
-MODULES_CURRENT="g_ether nf_tables"
+MODULES="g_ether nf_tables"
 DEFAULT_OVERLAYS="i2c0 usbhost0 usbhost1 usbhost2"
 DEFAULT_CONSOLE="serial"
 SERIALCON="ttyS1,ttyGS0"
 HAS_VIDEO_OUTPUT="no"
-KERNEL_TARGET="legacy,current,edge"
+KERNEL_TARGET="current,edge"
