Board config file for a WLAN Pi on a NEO3.

--- a/config/boards/wlanpi-neo.conf
+++ b/config/boards/wlanpi-neo.conf
@@ -8,4 +8,4 @@ DEFAULT_OVERLAYS="i2c0 usbhost1 usbhost2"
 DEFAULT_CONSOLE="serial"
 SERIALCON="ttyS0,ttyGS0"
 HAS_VIDEO_OUTPUT="no"
-KERNEL_TARGET="legacy,current,edge"
+KERNEL_TARGET="current,edge"
