Update maintainer email.

--- a/userpatches/config-common.conf
+++ b/userpatches/config-common.conf
@@ -29,5 +29,5 @@ CARD_DEVICE=""				# device name /dev/sdx of your SD card to burn directly to the
 COMPRESS_OUTPUTIMAGE=sha,gpg,img,gz	# generate gz compressed file
 
 MAINTAINER="Adrian Granados"
-MAINTAINERMAIL="adrian@adriangranados.com"
+MAINTAINERMAIL="adrian@intuitibits.com"
 
