--- a/config/boards/wlanpi-neo3.conf
+++ b/config/boards/wlanpi-neo3.conf
@@ -4,7 +4,7 @@ BOARDFAMILY="rockchip64"
 BOOTCONFIG="nanopi-r2s-rk3328_defconfig"
 KERNEL_TARGET="current,edge"
 DEFAULT_CONSOLE="serial"
-DEFAULT_OVERLAYS="i2c0 usbhost0 usbhost1 usbhost2"
+DEFAULT_OVERLAYS="usbhost0 usbhost1 usbhost2"
 MODULES="g_ether nf_tables"
 MODULES_BLACKLIST="rockchipdrm analogix_dp dw_mipi_dsi dw_hdmi gpu_sched lima"
 SERIALCON="ttyS2:1500000,ttyGS0"
