--- a/userpatches/lib.config
+++ b/userpatches/lib.config
@@ -1,6 +1,9 @@
 # Kernel version
 KERNELBRANCH="tag:v6.1.11"
 
+# Nameserver
+NAMESERVER=8.8.8.8
+
 # Python packages
 PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL libpython3-dev libpython3.9 libpython3.9-dev python3-certifi python3-chardet python3-dev python3-idna python3-numpy python3-protobuf python3-requests python3-serial python3-six python3-urllib3 python3-usb python3.9-dev python3-scapy python3-wheel python3-pillow python3-pil python3-pip python3-setuptools python3-smbus python3-venv"
 
@@ -12,6 +15,9 @@ PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL nginx-light php7.4-fpm cockpit
 
 # Miscelaneous (editors, build, libraries, etc)
 PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL tmux mg vim lshw build-essential libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libboost-thread-dev libffi-dev libcurl4-openssl-dev libssl-dev libjpeg-dev htop"
+
+# Spectools, latest supported libpcap
+PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL spectools libpcap0.8=1.10.3-1~bpo11+1"
 
 # Remove NetworkManager Packages
 PACKAGE_LIST_RM="network-manager network-manager-gnome network-manager-openvpn-gnome"
