--- a/packages/extras-buildpkgs/90-wlanpiserver.conf
+++ b/packages/extras-buildpkgs/90-wlanpiserver.conf
@@ -2,7 +2,7 @@
 local package_name="wlanpiserver"
 local package_repo="https://github.com/WLAN-Pi/wlanpiserver.git"
 local package_ref="branch:main"
-local package_upstream_version="0.01"
+local package_upstream_version="0.01-1"
 local package_builddeps=""
 local package_install_target="wlanpiserver"
 local package_component="${release}-utils"
