--- a/packages/extras-buildpkgs/wlanpi-webui/debian/control
+++ b/packages/extras-buildpkgs/wlanpi-webui/debian/control
@@ -2,13 +2,21 @@ Source: wlanpi-webui
 Section: embedded
 Priority: extra
 Maintainer: Daniel Finimundi <daniel@finimundi.com>
-Build-Depends: debhelper (>=9)
-Standards-Version: 3.9.8
-Homepage: https://github.com/joshschmelzle/wlanpi-webui.git
+Build-Depends: debhelper (>=9),
+	       dh-python,
+               dh-virtualenv (>= 1.0),
+               python3,
+               python3-dev,
+               python3-setuptools,
+               python3-distutils,
+               python3-venv
+Standards-Version: 4.6.0
+X-Python3-Version: >= 3.7
+Homepage: https://github.com/WLAN-Pi/wlanpi-webui.git
 
 Package: wlanpi-webui
 Architecture: any
-Multi-Arch: foreign
+Pre-Depends: dpkg (>= 1.16.1), python3 (>=3.7), ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: WebUI for WLAN Pi
  WebUI to monitor and interact with a WLAN Pi.
