Fixes regressions introduced in 2.1.3.

--- a/userpatches/lib.config
+++ b/userpatches/lib.config
@@ -17,7 +17,7 @@ PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL nginx-light php7.4-fpm cockpit
 PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL tmux mg vim lshw build-essential libboost-filesystem-dev libboost-program-options-dev libboost-system-dev libboost-thread-dev libffi-dev libcurl4-openssl-dev libssl-dev libjpeg-dev htop"
 
 # Spectools, latest supported libpcap
-PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL spectools libpcap0.8=1.10.3-1~bpo11+1"
+PACKAGE_LIST_ADDITIONAL="$PACKAGE_LIST_ADDITIONAL spectools libpcap0.8=1.10.3-1~bpo11+1 wpasupplicant/bullseye-backports"
 
 # Remove NetworkManager Packages
 PACKAGE_LIST_RM="network-manager network-manager-gnome network-manager-openvpn-gnome"
